WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25557
REGRESSION: Canvas elements are ignored instead of being exposed as AXImage
https://bugs.webkit.org/show_bug.cgi?id=25557
Summary
REGRESSION: Canvas elements are ignored instead of being exposed as AXImage
chris fleizach
Reported
2009-05-04 17:22:08 PDT
Canvas elements are ignored instead of expose as AXImage
Attachments
patch
(4.88 KB, patch)
2009-05-04 17:25 PDT
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-05-04 17:25:42 PDT
Created
attachment 30006
[details]
patch
Oliver Hunt
Comment 2
2009-05-04 17:29:40 PDT
Comment on
attachment 30006
[details]
patch r=me, minor typo in the test case: alt="cavnas 1"
Mark Rowe (bdash)
Comment 3
2009-05-04 17:32:23 PDT
***
Bug 25556
has been marked as a duplicate of this bug. ***
chris fleizach
Comment 4
2009-05-04 17:39:33 PDT
http://trac.webkit.org/changeset/43197
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug