Bug 25557: REGRESSION: Canvas elements are ignored instead of being exposed as AXImage https://bugs.webkit.org/show_bug.cgi?id=25557

Canonical link: https://commits.webkit.org/35227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43197 268f45cc-cd09-0410-ab3c-d52691b4dbfc